<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.tirza.soutetirza_pset62.SearchActivity">

    <TextView
        android:text="@string/welcomeText"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/welcomeText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/location"
        android:layout_below="@id/welcomeText"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:id="@+id/giveLocation" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/keywords"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/giveLocation"
        android:layout_below="@+id/giveLocation"
        android:id="@+id/giveKeywords" />

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_below="@id/giveKeywords"
        android:textColor="@color/white"
        android:onClick="search"
        android:layout_centerHorizontal="true"
        android:id="@+id/searchButton" />

</RelativeLayout>