<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.tirza.soutetirza_pset62.AccountActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:gravity="start"
        android:id="@+id/giveEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:layout_below="@+id/giveEmail"
        android:layout_alignStart="@+id/giveEmail"
        android:layout_marginTop="20dp"
        android:id="@+id/givePassword" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/givePassword"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:onClick="signUp"
            android:layout_marginEnd="10dp"
            android:id="@+id/signUpButton" />

        <Button
            android:text="@string/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signUpButton"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:onClick="signIn"
            android:id="@+id/signInButton" />

        <Button
            android:text="@string/signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:onClick="signOut"
            android:id="@+id/signOutButton" />

    </RelativeLayout>

</RelativeLayout>
